--- a/musicbeats/templates/musicbeats/login.html
+++ b/musicbeats/templates/musicbeats/login.html
@@ -2,6 +2,10 @@
 {% block body %}
 <div class="container d-flex justify-content-center align-items-center vh-100">
   <div class="card shadow-lg p-4" style="width: 400px; border-radius: 20px;">
+    <div class="text-center">
+      <img src="/media/images/Music Logo.png/" width="150px">
+    </div>
+    
     <h3 class="text-center mb-4">Login to <span style="color:#63E6BE;">Soundory</span></h3>
 
     <form method="POST" action="/musicbeats/login/">
