--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="/media/images/soundmanagerv297a-20170601/script/soundmanager2.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" /> 
-
+    
     <style>
       @keyframes shake {
         0%, 100% { transform: rotate(0deg); }
@@ -31,11 +31,13 @@
         display: inline-block;
         animation: pulse 3s ease-in-out infinite;
       }
+      {% block extra_styles %} {% endblock %}
     </style>
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body style="padding-top: 55px;">
     {% load static %}
+    {% if not hide_nav_footer %}
     <nav class="navbar navbar-expand-lg navbar-dark  px-3 " style=" background: linear-gradient(to right, #2c3e50, #34495e);
   position: fixed; top: 0; left: 0; width: 100%; z-index: 999; border-bottom: 1px solid rgba(255, 255, 255, 0.1);">
       <a class="navbar-brand d-flex align-items-center" href="/" style="color: #63E6BE;">
@@ -114,12 +116,13 @@
         {% endif %}
       </div>
     </nav>
-    
+    {% endif %}
+
     {% block body %}
     
     {% endblock %}
 
-
+{% if not hide_nav_footer %}
 <footer style="background: linear-gradient(to right, #2c3e50, #34495e); color: #fff; padding: 40px 0; margin-top: 60px;">
   <div class="container text-center">
     <h4 style="font-family: 'Dancing Script', cursive; font-size: 28px; color: #ffdd57;">
@@ -157,7 +160,7 @@
     </p>
   </div>
 </footer>
-
+{% endif %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
