--- a/musicbeats/templates/musicbeats/login.html
+++ b/musicbeats/templates/musicbeats/login.html
@@ -1,6 +1,27 @@
 {% extends 'musicbeats/basic.html' %} {% block title %}Login{% endblock %} 
+{% block extra_styles %}
+body {
+  background-image: url('/media/images/BodyBG.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 100vh;
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: -1;
+}
+{% endblock %}
+
+
 {% block body %}
-<div class="container d-flex justify-content-center align-items-center vh-100">
+
+<div class="container d-flex justify-content-center align-items-center vh-90 mt-4">
   <div class="card shadow-lg p-4" style="width: 400px; border-radius: 20px;">
     <div class="text-center">
       <img src="/media/images/Music Logo.png/" width="150px">
