--- a/musicbeats/templates/musicbeats/index.html
+++ b/musicbeats/templates/musicbeats/index.html
@@ -128,7 +128,7 @@
         <h5 class="card-title">{{ i.name }}</h5>
         <p><span class="tag-badge">{{ i.tags }}</span></p>
         <p class="card-text">🎬 {{ i.movie }}</p>
-        <a href="/musicbeats/songs/{{i.song_id}}" class="btn btn-outline-danger w-100"><span class="shake-on-hover" style="display:inline-block;">🎧</span> Listen Song</a>
+        <a href="/musicbeats/songs/{{i.song_id}}" class="btn btn-outline-success w-100"><span class="shake-on-hover" style="display:inline-block;">🎧</span> Listen Song</a>
       </div>
     </div>
     {% endfor %}
@@ -150,16 +150,12 @@
         <h5 class="card-title">{{ i.name }}</h5>
         <p><span class="tag-badge">{{ i.tags }}</span></p>
         <p class="card-text">🎬 {{ i.movie }}</p>
-        <a href="/musicbeats/songs/{{i.song_id}}" class="btn btn-outline-danger w-100"><span class="shake-on-hover" style="display:inline-block;">🎧</span> Listen Song</a>
+        <a href="/musicbeats/songs/{{i.song_id}}" class="btn btn-outline-success w-100"><span class="shake-on-hover" style="display:inline-block;">🎧</span> Listen Song</a>
       </div>
     </div>
     {% endfor %}
   </div>
 </div>
-
-<hr>
-
-
 {% endblock %}
 
  
