--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -1,14 +1,10 @@
-{% load static %}
-
+{% load pwa %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% progressive_web_app_meta %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <link rel="manifest" href="{% url 'manifest' %}">
-    <meta name="theme-color" content="#0b0f1a">
-    <link rel="apple-touch-icon" href="{% static 'pwa/icons/icon-192.png' %}">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -175,15 +171,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     {% block js %}
     {% endblock %}
-    <script>
-  if ("serviceWorker" in navigator) {
-    window.addEventListener("load", () => {
-      navigator.serviceWorker.register("/service-worker.js")
-        .catch(err => console.error("SW registration failed:", err));
-    });
-  }
-</script>
-
 </body> 
 </html>
 
